src/widget/snapshots/nifi_lens__widget__panel__tests__panel_focused.snap
---
source: src/widget/panel.rs
expression: "draw(\" Properties \", true, None)"
---
"┏ Properties ━━━━━━━━━━━━━━━━━━┓"
"┃                              ┃"
"┃                              ┃"
"┃                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
