src/widget/snapshots/nifi_lens__widget__panel__tests__panel_right_focused.snap
---
source: src/widget/panel.rs
expression: "draw(\" Properties \", true, Some(\" 10/14 \"))"
---
"┏ Properties ━━━━━━━━━━━ 10/14 ┓"
"┃                              ┃"
"┃                              ┃"
"┃                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
