src/widget/snapshots/nifi_lens__widget__panel__tests__panel_unfocused.snap
---
source: src/widget/panel.rs
expression: "draw(\" Nodes \", false, None)"
---
"┌ Nodes ───────────────────────┐"
"│                              │"
"│                              │"
"│                              │"
"└──────────────────────────────┘"
