src/widget/snapshots/nifi_lens__widget__panel__tests__panel_with_right_title.snap
---
source: src/widget/panel.rs
expression: "draw(\" Properties \", false, Some(\" 10/14 \"))"
---
"┌ Properties ─────────── 10/14 ┐"
"│                              │"
"│                              │"
"│                              │"
"└──────────────────────────────┘"
